# MyCode

./: 1.txt  2.txt  CMakeLists.txt  TestPPM.cpp
MySoftwareRender/: 1.txt  2.txt  CMakeLists.txt  README.md  TestPPM.cpp
MySoftwareRender/SoftwareRender/: Color.cpp  Color.h  SoftwareRender.cpp  SoftwareRender.h
MySoftwareRender/SoftwareRender/Geometry/: Cube.cpp  Cube.h  Triangle.cpp  Triangle.h
MySoftwareRender/SoftwareRender/math/: Matrix.cpp  Matrix.h  Vector.cpp  Vector.h
SmartPtr/: Cmakelists.txt  SmartPtr.cpp
SoftwareRender/: Color.cpp  Color.h  SoftwareRender.cpp  SoftwareRender.h
SoftwareRender/Geometry/: Cube.cpp  Cube.h  Triangle.cpp  Triangle.h
SoftwareRender/math/: Matrix.cpp  Matrix.h  Vector.cpp  Vector.h
Unordered_Map/: CMakeLists.txt  Unordered_Map.code-workspace  Unordered_Map.cpp  Vector.h  note.md
Vector/: CMakeLists.txt  MyVector.cpp
